# Tek-2-PSU

B-PSU-400-BER-4-1-malloc-karl-erik.stoerzel/: CMakeLists.txt  Makefile  main.c  nr1  nr1b  nr2  nr2b  run.sh
B-PSU-400-BER-4-1-malloc-karl-erik.stoerzel/include/: malloc_structs.h
B-PSU-400-BER-4-1-malloc-karl-erik.stoerzel/src/: bestfitalgo.c  calloc.c  free.c  malloc.c  realloc.c  reallocarray.c
B-PSU-400-BER-4-1-nmobjdump-karl-erik.stoerzel/: CMakeLists.txt  Makefile  a.out  flags.h  my_blender  my_nm  my_objdump  mynm.txt  nm.txt  obj.txt
B-PSU-400-BER-4-1-nmobjdump-karl-erik.stoerzel/nm/: help.txt
B-PSU-400-BER-4-1-nmobjdump-karl-erik.stoerzel/nm/include/: error_handling.h  file_parse.h  flags.h  get_type.h  help.h  parser.h  sort.h
B-PSU-400-BER-4-1-nmobjdump-karl-erik.stoerzel/nm/src/: error_handling.c  file_parse.c  get_type.c  help.c  main.c  sort.c
B-PSU-400-BER-4-1-nmobjdump-karl-erik.stoerzel/objdump/include/: file_header32.h  file_header64.h  file_sections32.h  file_sections64.h  flags.h  help.h  parse_file.h
B-PSU-400-BER-4-1-nmobjdump-karl-erik.stoerzel/objdump/src/: file_header32.c  file_header64.c  file_sections32.c  file_sections64.c  help.c  main.c  parse_file32.c  parse_file64.c  parser.c
